[gd_scene load_steps=14 format=3 uid="uid://dl6bsofnkbwo"]

[ext_resource type="Script" path="res://menus/Menu.gd" id="1_u7lc4"]
[ext_resource type="AudioStream" uid="uid://b6ftmxi8upa57" path="res://assets/music/Strange Strings.wav" id="2_1caw2"]
[ext_resource type="Texture2D" uid="uid://jqxa3p8nao7y" path="res://assets/GUI/keyboard.png" id="2_7i2gt"]
[ext_resource type="Texture2D" uid="uid://wv8an4yw7rxn" path="res://assets/GUI/leaderboards.png" id="3_bj6ex"]
[ext_resource type="Texture2D" uid="uid://bglohvefukin3" path="res://assets/GUI/settings.png" id="4_lw7wv"]
[ext_resource type="Texture2D" uid="uid://38571eokbv6k" path="res://assets/GUI/turnoff.png" id="5_0mlvc"]
[ext_resource type="Texture2D" uid="uid://clgaa3smiqwts" path="res://assets/GUI/Logo.svg" id="7_7rexa"]
[ext_resource type="FontFile" uid="uid://by8pmquuldg07" path="res://assets/fonts/Indie_Flower/Noto_Sans_KR/static/NotoSansKR-Medium.ttf" id="8_is3d6"]
[ext_resource type="PackedScene" uid="uid://fohx5enkv5k0" path="res://menus/volume_slider.tscn" id="8_q0qsk"]
[ext_resource type="Texture2D" uid="uid://8vy574ni535b" path="res://assets/GUI/arrow_left.png" id="10_4powo"]
[ext_resource type="AudioStream" uid="uid://m8emnsulv5sa" path="res://assets/sounds/enemy_death.wav" id="10_kvymv"]

[sub_resource type="Gradient" id="Gradient_jkkqr"]
colors = PackedColorArray(1, 1, 1, 1, 1, 0.764706, 0.168627, 1)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j4jb6"]
gradient = SubResource("Gradient_jkkqr")
fill_from = Vector2(0.175214, 0.24359)
fill_to = Vector2(0.91453, 0.790598)

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u7lc4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -695.0
offset_top = -479.0
offset_right = -695.0
offset_bottom = -479.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.22042, 2.75623)
texture = SubResource("GradientTexture2D_j4jb6")

[node name="ButtonBox" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -303.0
offset_top = -428.0
offset_right = 303.0
grow_horizontal = 2
grow_vertical = 0

[node name="StartButton" type="Button" parent="ButtonBox"]
layout_mode = 2
text = "Start game"
icon = ExtResource("2_7i2gt")

[node name="Leaderboards" type="Button" parent="ButtonBox"]
layout_mode = 2
text = "Leaderboards"
icon = ExtResource("3_bj6ex")

[node name="OptionsButton" type="Button" parent="ButtonBox"]
layout_mode = 2
text = "Settings"
icon = ExtResource("4_lw7wv")

[node name="QuitButton" type="Button" parent="ButtonBox"]
layout_mode = 2
text = "Quit"
icon = ExtResource("5_0mlvc")

[node name="Soundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1caw2")
autoplay = true
bus = &"Music"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(584, -62)
scale = Vector2(3.44611, 3.25792)
texture = ExtResource("7_7rexa")

[node name="SettingsBox" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -484.5
offset_top = -537.0
offset_right = 484.5
grow_horizontal = 2
grow_vertical = 0

[node name="TestSoundButton" type="Button" parent="SettingsBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33
anchor_top = 0.5
anchor_right = 0.33
anchor_bottom = 0.5
offset_left = -113.27
offset_top = -71.5
offset_right = 113.73
offset_bottom = 71.5
grow_vertical = 2
theme_override_fonts/font = ExtResource("8_is3d6")
theme_override_font_sizes/font_size = 37
text = "Play sound"

[node name="Master Volume" type="Label" parent="SettingsBox"]
layout_mode = 0
offset_left = 570.5
offset_top = 150.0
offset_right = 754.5
offset_bottom = 185.0
theme_override_font_sizes/font_size = 25
text = "Master Volume"

[node name="Master" parent="SettingsBox" instance=ExtResource("8_q0qsk")]
layout_mode = 0
offset_left = 560.5
offset_top = 208.0
offset_right = 774.5
offset_bottom = 224.0
ticks_on_borders = true
bus_name = "Master"

[node name="Music Volume" type="Label" parent="SettingsBox"]
layout_mode = 0
offset_left = 584.5
offset_top = 260.0
offset_right = 753.5
offset_bottom = 295.0
theme_override_font_sizes/font_size = 25
text = "Music Volume
"

[node name="Music" parent="SettingsBox" instance=ExtResource("8_q0qsk")]
layout_mode = 0
offset_left = 561.0
offset_top = 314.0
offset_right = 775.0
offset_bottom = 330.0
ticks_on_borders = true
bus_name = "Music"

[node name="Sfx Volume" type="Label" parent="SettingsBox"]
layout_mode = 0
offset_left = 603.5
offset_top = 368.0
offset_right = 739.5
offset_bottom = 403.0
theme_override_font_sizes/font_size = 25
text = "Sfx Volume"

[node name="Sfx" parent="SettingsBox" instance=ExtResource("8_q0qsk")]
layout_mode = 0
offset_left = 561.0
offset_top = 422.0
offset_right = 775.0
offset_bottom = 438.0
bus_name = "Sfx"

[node name="ExitSettingsButton" type="TextureButton" parent="SettingsBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.059
anchor_top = 0.091
anchor_right = 0.059
anchor_bottom = 0.091
offset_left = -31.671
offset_top = -31.867
offset_right = 32.329
offset_bottom = 32.133
mouse_default_cursor_shape = 2
texture_normal = ExtResource("10_4powo")

[node name="TestSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_kvymv")
bus = &"Sfx"

[connection signal="pressed" from="ButtonBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonBox/Leaderboards" to="." method="_on_leaderboards_pressed"]
[connection signal="pressed" from="ButtonBox/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ButtonBox/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="finished" from="Soundtrack" to="." method="_on_soundtrack_finished"]
[connection signal="pressed" from="SettingsBox/TestSoundButton" to="." method="_on_test_sound_button_pressed"]
[connection signal="pressed" from="SettingsBox/ExitSettingsButton" to="." method="_on_exit_settings_button_pressed"]
